WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
64962
Cannot click to position the caret to the right of an image with display:block style
https://bugs.webkit.org/show_bug.cgi?id=64962
Summary
Cannot click to position the caret to the right of an image with display:bloc...
Enrica Casucci
Reported
2011-07-21 11:22:23 PDT
Try the following test case: <div contentEditable="true">hello<img style="display:block;" src="
http://images.apple.com/macosx/images/productheader_title.png
">world</div> Click to the left of the image. You'll see the caret being places to the left of the image. Now try clicking to the right of the image. The caret is always placed to the left. You can use the arrow keys to move to the right of the image, but the mouse click won't work. This behaves as expected if the image has display:inline style.
Attachments
Patch
(6.46 KB, patch)
2011-07-21 11:29 PDT
,
Enrica Casucci
hyatt
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Enrica Casucci
Comment 1
2011-07-21 11:22:36 PDT
<
rdar://problem/9446343
>
Enrica Casucci
Comment 2
2011-07-21 11:29:45 PDT
Created
attachment 101613
[details]
Patch
Dave Hyatt
Comment 3
2011-07-21 11:34:13 PDT
Comment on
attachment 101613
[details]
Patch r=me
Enrica Casucci
Comment 4
2011-07-21 11:46:45 PDT
Committed revision 91481.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug